# pkg/http/cluster_status_controller.go
@@ -2,15 +2,16 @@ package http
 
 import "context"
 
+type ClusterStatusResponse struct {
+	NodeCount int `json:"node_count"`
+}
+
 func ClusterStatusControllerIndex(ctx context.Context, request *Request) Response {
-	return Response{
-		StatusCode: 200,
-		Body: map[string]any{
-			"status":  "ok",
-			"message": "Cluster is functioning normally",
-			"data": map[string]any{
-				"node_count": len(request.cluster.Nodes()),
-			},
+	return SuccessResponse(
+		"Cluster status",
+		ClusterStatusResponse{
+			NodeCount: len(request.cluster.Nodes()),
 		},
-	}
+		200,
+	)
 }
